--- a/CatDogLoverManagement/Pages/OrderService/MyCart.cshtml
+++ b/CatDogLoverManagement/Pages/OrderService/MyCart.cshtml
@@ -62,7 +62,7 @@
                             }
                             else
                             {
-                            <h5>Animal exchange</h5>
+                            <h5>Sell/Give Animal</h5>
                             }
                     </td>
                     <td>
