--- a/CatDogLoverManagement/Pages/Post/AddServicePost.cshtml
+++ b/CatDogLoverManagement/Pages/Post/AddServicePost.cshtml
@@ -130,9 +130,9 @@
 
 @section Scripts{
     <script>
-        var editor = new FroalaEditor('#description', {
-            imageUploadURL: '/api/images'
-        });
+        // var editor = new FroalaEditor('#description', {
+        //     imageUploadURL: '/api/images'
+        // });
 
         const featuredImageUploadElement = document.getElementById('featuredImageUpload');
         const image = document.getElementById('image');
