--- a/CatDogLoverManagement/Pages/Post/EditSellOrGivePost.cshtml
+++ b/CatDogLoverManagement/Pages/Post/EditSellOrGivePost.cshtml
@@ -109,7 +109,7 @@
 
                 <div class="mb-3" style="display:none">
                     <label for="animalId" class="form-label">AnimalID</label>
-                    <input type="text" class="form-control" id="animalId" asp-for="BlogPost.AnimalId" readonly />
+                    <input type="text" class="form-control" id="animalId" asp-for="Animal.AnimalId" readonly />
                 </div>
 
                 <div class="mb-3" style="display:none">
@@ -136,9 +136,9 @@ else
 
 @section Scripts{
     <script>
-        var editor = new FroalaEditor('#description', {
-            imageUploadURL: '/api/images'
-        });
+        // var editor = new FroalaEditor('#description', {
+        //     imageUploadURL: '/api/images'
+        // });
 
         const featuredImageUploadElement = document.getElementById('featuredImageUpload');
         const image = document.getElementById('image');
