--- a/CatDogLoverManagement/Pages/OrderService/Delete.cshtml
+++ b/CatDogLoverManagement/Pages/OrderService/Delete.cshtml
@@ -71,6 +71,6 @@
     <form method="post">
         <input type="hidden" asp-for="Order.OrderId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <a asp-page="./Home">Back to List</a>
     </form>
 </div>
