--- a/CatDogLoverManagement/Pages/OrderService/Edit.cshtml
+++ b/CatDogLoverManagement/Pages/OrderService/Edit.cshtml
@@ -67,7 +67,7 @@
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Home">Back to List</a>
 </div>
 
 @section Scripts {
