--- a/CatDogLoverManagement/Pages/Post/AddSellOrGivePost.cshtml
+++ b/CatDogLoverManagement/Pages/Post/AddSellOrGivePost.cshtml
@@ -93,9 +93,9 @@
  
 @section Scripts{
     <script>
-        var editor = new FroalaEditor('#description', {
-            imageUploadURL: '/api/images'
-        });
+        // var editor = new FroalaEditor('#description', {
+        //     imageUploadURL: '/api/images'
+        // });
 
         const featuredImageUploadElement = document.getElementById('featuredImageUpload');
         const image = document.getElementById('image');
