--- a/CatDogLoverManagement/Pages/Post/AddServicePost.cshtml
+++ b/CatDogLoverManagement/Pages/Post/AddServicePost.cshtml
@@ -35,9 +35,9 @@
                 <img src="" id="featuredImageDisplay" style="display:none; width:300px;" />
                 <span asp-validation-for="FeaturedImage" class="text-danger"></span>
             </div>
-            <div class="mb-3" style="display:none">
+            <div class="mb-3">
                 <label for="image" class="form-label">Image</label>
-                <input type="text" class="form-control" id="image" asp-for="AddBlogPostRequest.Image" />
+                <input type="text" class="form-control" id="image" asp-for="AddBlogPostRequest.Image" readonly />
                 <span asp-validation-for="AddBlogPostRequest.Image" class="text-danger"></span>
             </div>
             <div class="form-group">
