Update status for Blog Post Service

--- a/CatDogLoverManagement/Pages/OrderService/ManageOrders.cshtml
+++ b/CatDogLoverManagement/Pages/OrderService/ManageOrders.cshtml
@@ -77,29 +77,35 @@
                             {
                             <span class="badge bg-primary">@Html.DisplayFor(modelItem => item.Status)</span>
                             }
-                            else if (item.Status.Equals("Waiting"))
+                            else if (item.Status.Equals("Waiting") || item.Status.Equals("Processing"))
                             {
                             <span class="badge bg-danger">@Html.DisplayFor(modelItem => item.Status)</span>
                             }
                             else if (item.Status.Equals("Approved"))
                             {
-                            <span class="badge bg-secondary">@Html.DisplayFor(modelItem => item.Status)</span>
+                                <span class="badge bg-secondary">@Html.DisplayFor(modelItem => item.Status)</span>
+                            } else
+                            {
+                            <span class="badge bg-info">@Html.DisplayFor(modelItem => item.Status)</span>
                             }
-                    </td>
+                        </td>
                     <td>
                             @if (item.Status.Equals("Success"))
                             {
                             <span class="badge bg-primary">Đã Thanh Toán</span>
                             }
-                            else if (item.Status.Equals("Waiting"))
+                            else if (item.Status.Equals("Waiting") || item.Status.Equals("Processing"))
                             {
                             <button class="badge bg-info p-2" type="submit">Approve</button>
                             }
                             else if (item.Status.Equals("Approved"))
                             {
-                            <span class="badge bg-secondary">Đã duyệt</span>
+                                <span class="badge bg-secondary">Đã duyệt</span>
+                            } else
+                            {
+                            <span class="badge bg-dark">Unavailable</span>
                             }
-                    </td>
+                        </td>
                 </tr>
                 
             </form>}
