--- a/CatDogLoverManagement/Pages/Post/MyServicePosts.cshtml
+++ b/CatDogLoverManagement/Pages/Post/MyServicePosts.cshtml
@@ -66,15 +66,18 @@
                             {
                             <span class="badge bg-primary">@Html.DisplayFor(modelItem => item.Status)</span>
                             }
-                            else if (item.Status.Equals("Waiting"))
+                            else if (item.Status.Equals("Waiting") || item.Status.Equals("Processing"))
                             {
                             <span class="badge bg-danger">@Html.DisplayFor(modelItem => item.Status)</span>
                             }
                             else if (item.Status.Equals("Approved"))
                             {
-                            <span class="badge bg-secondary">@Html.DisplayFor(modelItem => item.Status)</span>
+                                <span class="badge bg-secondary">@Html.DisplayFor(modelItem => item.Status)</span>
+                            } else
+                            {
+                            <span class="badge bg-info">@Html.DisplayFor(modelItem => item.Status)</span>
                             }
-                    </td>
+                        </td>
                     <td>
                             @foreach (var timeFrame in item.TimeFrames)
                             {
