Fix payment service

--- a/CatDogLoverManagement/Pages/OrderService/MyCart.cshtml
+++ b/CatDogLoverManagement/Pages/OrderService/MyCart.cshtml
@@ -13,25 +13,25 @@
         <thead>
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model =>  model.Order.First().Image)
+                    Image
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model =>  model.Order.First().Title)
+                    Title
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model =>  model.Order.First().BuyerName)
+                    BuyerName
                 </th>
                 <th>
                     Post Type
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model =>  model.Order.First().Price)
+                    Price
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model =>  model.Order.First().OrderDate)
+                    Order Date
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model =>  model.Order.First().Status)
+                    Status
                 </th>
                 <th>
                     Payment
@@ -41,8 +41,9 @@
         </thead>
         <tbody>
             <form method="post" asp-page-handler="PayOrder">
-                @foreach (var item in Model.Order)
+                @for (int i = 0; i < Model.Order.Count(); i++)
                 {
+                    var item = Model.Order.ElementAt(i);
                 <tr>
                     <input type="hidden" value="@item.OrderId" asp-for="OrderItemId">
                     <td>
@@ -58,7 +59,7 @@
                             @if (item.ServiceModel != null)
                             {
                             <h5>Service</h5>
-                            <div class="badge bg-danger p-2" >@item.From - @item.To</div>
+                            <div class="badge bg-danger p-2">@item.From - @item.To</div>
                             }
                             else
                             {
@@ -101,12 +102,13 @@
                             }
                             else if (item.Status.Equals("Approved"))
                             {
-                                <button class="badge bg-primary p-2" type="submit">Thanh toán</button>
-                            } else
+                            <button class="badge bg-primary p-2" type="button" onclick="submitPayment('@item.OrderId')">Thanh toán</button>
+                            }
+                            else
                             {
                             <span class="badge bg-info">Unavailable</span>
                             }
-                        </td>
+                    </td>
                 </tr>
                 }
             </form>
@@ -122,3 +124,12 @@ else
         </button>
     </a>
 }
+
+<script>
+    function submitPayment(orderId) {
+        // Update the hidden input field with the selected OrderId
+        $('[name="OrderItemId"]').val(orderId);
+        // Submit the form
+        $('form').submit();
+    }
+</script>
