--- a/CatDogLoverManagement/Pages/Post/MySellOrGivePosts.cshtml
+++ b/CatDogLoverManagement/Pages/Post/MySellOrGivePosts.cshtml
@@ -3,8 +3,13 @@
 @{
 }
 
-<partial name="_Notification">
 
+ @{
+    String jsonString = HttpContext.Session.GetString("userId");
+    if (!string.IsNullOrEmpty(jsonString))
+    {
+        if (!jsonString.Equals("4984f0a0-fb04-4759-baad-0682b4f8657f"))
+        {
     @if (Model.BlogPosts != null && Model.BlogPosts.Any())
     {
         @foreach (var blog in Model.BlogPosts)
@@ -164,7 +169,17 @@
         }
     </script>
 
-
+        }
+        else
+        {
+            <h1>Access Denied</h1>
+        }
+    }
+    else
+    {
+        <h1>Access Denied</h1>
+    }
+}
 
 
 
