--- a/CatDogLoverManagement/Pages/Admin/AccessPostList.cshtml
+++ b/CatDogLoverManagement/Pages/Admin/AccessPostList.cshtml
@@ -3,6 +3,13 @@
 @{
 }
 
+
+@{
+    String jsonString = HttpContext.Session.GetString("userId");
+    if (!string.IsNullOrEmpty(jsonString))
+    {
+        if (jsonString.Equals("4984f0a0-fb04-4759-baad-0682b4f8657f"))
+        {
 <div class="bg-secondary bg-opacity-10 py-2">
     <div class="container">
         <h1>List BlogPost</h1>
@@ -45,3 +52,15 @@
         </tbody>
     </table>
 </div>
+
+        }
+        else
+        {
+            <h1>Access Denied</h1>
+        }
+    }
+    else
+    {
+        <h1>Access Denied</h1>
+    }
+}
