--- a/CatDogLoverManagement/Pages/Post/AddSellOrGivePost.cshtml
+++ b/CatDogLoverManagement/Pages/Post/AddSellOrGivePost.cshtml
@@ -4,6 +4,12 @@
 
 }
 
+@{
+    String jsonString = HttpContext.Session.GetString("userId");
+    if (!string.IsNullOrEmpty(jsonString))
+    {
+        if (!jsonString.Equals("4984f0a0-fb04-4759-baad-0682b4f8657f"))
+        {
 
 <div class="bg-secondary bg-opacity-10 py-2">
     <div>
@@ -141,3 +147,14 @@
     </script>
 }
 
+        }
+        else
+        {
+            <h1>Access Denied</h1>
+        }
+    }
+    else
+    {
+        <h1>Access Denied</h1>
+    }
+}
