--- a/CatDogLoverManagement/Pages/Post/Comments.cshtml
+++ b/CatDogLoverManagement/Pages/Post/Comments.cshtml
@@ -2,6 +2,12 @@
 @model CatDogLoverManagement.Pages.Post.CommentsModel
 @{
 }
+@{
+    String jsonString = HttpContext.Session.GetString("userId");
+    if (!string.IsNullOrEmpty(jsonString))
+    {
+        if (!jsonString.Equals("4984f0a0-fb04-4759-baad-0682b4f8657f"))
+        {
 @if (Model.Comments != null && Model.Comments.Any())
 {
     <table class="table">
@@ -46,3 +52,14 @@ else
     <h3> No one comments on your post </h3>
 }
 
+      }
+        else
+        {
+            <h1>Access Denied</h1>
+        }
+    }
+    else
+    {
+        <h1>Access Denied</h1>
+    }
+}
