--- a/CatDogLoverManagement/Pages/Post/EditServicePost.cshtml
+++ b/CatDogLoverManagement/Pages/Post/EditServicePost.cshtml
@@ -10,33 +10,39 @@
                 <div class="mb-3" style="display:none">
                     <label for="id" class="form-label">Post Id</label>
                     <input type="text" class="form-control" id="id" asp-for="BlogPost.PostId" readonly />
+                    <span class="text-danger" asp-validation-for="BlogPost.PostId"></span>
                 </div>
                 <div class="mb-3">
                     <label for="title" class="form-label">Title</label>
                     <input type="text" class="form-control" id="title" asp-for="BlogPost.Title" />
+                    <span class="text-danger" asp-validation-for="BlogPost.Title"></span>
                 </div>
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
                     <textarea class="form-control" id="description" asp-for="BlogPost.Description"></textarea>
+                    <span class="text-danger" asp-validation-for="BlogPost.Description"></span>
                 </div>
 
                 <div class="mb-3">
                     <label for="price" class="form-label">Price</label>
                     <input type="text" class="form-control" id="price" asp-for="BlogPost.Price" />
+                    <span class="text-danger" asp-validation-for="BlogPost.Price"></span>
                 </div>
 
                 <div class="mb-3" style="display:none">
                     <label for="createdDate" class="form-label">CreatedDate</label>
                     <input type="date" class="form-control" id="createdDate" asp-for="BlogPost.CreatedDate" />
+                    <span class="text-danger" asp-validation-for="BlogPost.CreatedDate"></span>
                 </div>
 
                 <div class="mb-3">
                     <label for="featuredImageUpload" class="form-label">Featured Image Upload</label>
                     <input type="file" id="featuredImageUpload" asp-for="FeaturedImage" />
+                    <span class="text-danger" asp-validation-for="FeaturedImage"></span>
 
                     @if (Model.BlogPost.Image != null)
                     {
-                        <img src="" id="featuredImageDisplay" style="width:300px;" />
+                        <img src="@Model.BlogPost.Image" id="featuredImageDisplay" style="width:300px;" />
                     }
                     else
                     {
@@ -48,45 +54,55 @@
                 <div class="mb-3" style="display:none">
                     <label for="image" class="form-label">Image</label>
                     <input type="text" class="form-control" id="image" asp-for="BlogPost.Image" />
+                    <span class="text-danger" asp-validation-for="BlogPost.Image"></span>
                 </div>
 
                 <div class="mb-3" style="display:none">
                     <label for="status" class="form-label">Status</label>
                     <input type="text" class="form-control" id="status" asp-for="BlogPost.Status" />
+                    <span class="text-danger" asp-validation-for="BlogPost.Status"></span>
                 </div>
                 <div class="mb-3" style="display:none">
                     <label for="status" class="form-label">ServiceId</label>
                     <input type="text" class="form-control" id="name" asp-for="Service.ServiceId" />
+                    <span class="text-danger" asp-validation-for="Service.ServiceId"></span>
                 </div>
                 <div class="mb-3">
                     <label for="status" class="form-label">Name</label>
                     <input type="text" class="form-control" id="name" asp-for="Service.ServiceName" />
+                    <span class="text-danger" asp-validation-for="Service.ServiceName"></span>
                 </div>
                 <div class="mb-3">
                     <label for="status" class="form-label">Address</label>
                     <input type="text" class="form-control" id="address" asp-for="Service.Address" />
+                    <span class="text-danger" asp-validation-for="Service.Address"></span>
 
                 </div>
                 <div class="mb-3">
                     <label for="status" class="form-label">Service Description</label>
                     <input type="text" class="form-control" id="serviceDescription" asp-for="Service.Description" />
+                    <span class="text-danger" asp-validation-for="Service.Description"></span>
                 </div>
                 <div class="mb-3" style="display:none">
                     <label for="status" class="form-label">Image</label>
                     <input type="text" class="form-control" id="serviceImage" asp-for="Service.Image" />
+                    
                 </div>
                 <div class="mb-3">
                     <label for="status" class="form-label">Note</label>
                     <input type="text" class="form-control" id="note" asp-for="Service.Note" />
+                    <span class="text-danger" asp-validation-for="Service.Note"></span>
                 </div>
                 <div class="mb-3">
                     <label for="status" class="form-label">Open Date</label>
-                    <input type="text" class="form-control" id="openDate" asp-for="Service.OpenDate" />
+                    <input type="date" class="form-control" id="openDate" asp-for="Service.OpenDate" />
+                    <span class="text-danger" asp-validation-for="Service.OpenDate"></span>
                 </div>
 
                 <div class="mb-3" style="display:none">
                     <label for="userId" class="form-label">UserID</label>
                     <input type="text" class="form-control" id="userId" asp-for="BlogPost.UserId" readonly />
+                    <span class="text-danger" asp-validation-for="BlogPost.UserId"></span>
                 </div>
 
                 <div class="form-group">
