--- a/CatDogLoverManagement/Pages/Post/SellOrGivePosts.cshtml
+++ b/CatDogLoverManagement/Pages/Post/SellOrGivePosts.cshtml
@@ -2,15 +2,22 @@
 @model CatDogLoverManagement.Pages.Post.ListModel
 @{
 }
+
+@{
+    String jsonString = HttpContext.Session.GetString("userId");
+    if (!string.IsNullOrEmpty(jsonString))
+    {
+        if (!jsonString.Equals("4984f0a0-fb04-4759-baad-0682b4f8657f"))
+        {
+
 <div class="bg-secondary bg-opacity-10 py-2">
     <div>
         <h1>Sell/Give Blog Posts</h1>
     </div>
 </div>
-@{
+
     var id = HttpContext.Session.GetString("userId");
-}
-<partial name="_Notification">
+
 
 @if (Model.BlogPosts != null && Model.BlogPosts.Any())
 {
@@ -187,3 +194,16 @@ else
                 margin: 10px 0;
             }
     </style>
+
+        }
+        else
+        {
+            <h1>Access Denied</h1>
+        }
+    }
+    else
+    {
+        <h1>Access Denied</h1>
+    }
+}
+            
