--- a/CatDogLoverManagement/Pages/Post/ServicePosts.cshtml
+++ b/CatDogLoverManagement/Pages/Post/ServicePosts.cshtml
@@ -2,15 +2,23 @@
 @model CatDogLoverManagement.Pages.Post.ServicePostModel
 @{
 }
+
+@{
+    String jsonString = HttpContext.Session.GetString("userId");
+    if (!string.IsNullOrEmpty(jsonString))
+    {
+        if (!jsonString.Equals("4984f0a0-fb04-4759-baad-0682b4f8657f"))
+        {
 <div class="bg-secondary bg-opacity-10 py-2">
     <div>
         <h1>Service Blog Posts</h1>
     </div>
 </div>
-@{
+
     var id = HttpContext.Session.GetString("userId");
-}
-<partial name="_Notification">
+    
+
+@* <partial name="_Notification"> *@
 
 @if (Model.BlogPosts != null && Model.BlogPosts.Any())
 {
@@ -108,3 +116,14 @@ else
     </div>
 }
 
+        }
+        else
+        {
+            <h1>Access Denied</h1>
+        }
+    }
+    else
+    {
+        <h1>Access Denied</h1>
+    }
+}
