--- a/CatDogLoverManagement/Pages/Post/ServicePosts.cshtml
+++ b/CatDogLoverManagement/Pages/Post/ServicePosts.cshtml
@@ -61,7 +61,7 @@
                                 </div>
                             </div>
                             <div class="col-4">
-                                <img src="https://bihaku.vn/wp-content/uploads/2020/10/cho-pug-mat-xe.jpg" class="card-img" alt="@blog.Title">
+                                    <img src="@blog.Image" class="card-img" alt="@blog.Title">
                             </div>
                         </div>
                         <div class="row">
